brought hr inside radiogroup and removed padding to ensure alignment

--- a/styles/pages/_gtoc-page.scss
+++ b/styles/pages/_gtoc-page.scss
@@ -56,6 +56,7 @@
       border-color: $fn-mdgrey;
       margin-top: 60px;
       margin-bottom: 0;
+      padding: 0;
     }
 
 
